version0/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    tier: backend
spec:
  template:
    metadata:
      name: myapp-pod
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp-container
        image: escortnotice/basicspringbootanddocker
        resources:
          limits:
            # memory -- 1 Kib (kibibyte = 1024 byte), 1 MiB(Mebibitye) = 1024 Kib 
            # cpu -- If a system has 1 core then 1 core = 1000 millicore, 100m = 100 millicores (1/10 of a core), 500m = (1/2 of a core)
            memory: "350Mi"
            cpu: "300m"
  replicas: 1
  selector:
    matchLabels:
      app: myapp
