version0/client-clusterIp.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-service
spec:
  type: ClusterIP
  ports:
  - port: 3050
    targetPort: 8085
  selector:
    app: myapp
