version0/client-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: client-node-port
spec:
  type: NodePort
  ports:
  - port: 3050
    targetPort: 8085
    nodePort: 31515
  selector:
    app: myapp-basicspringbootanddocker
