version0/ingress-basic.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp
spec:
  backend:
    serviceName: cluster-ip-service
    servicePort: 8085
